# Farmease

./: .gitignore  Makefile  README.md  dashboard.py  ml_pipeline.py  predict_next.py  requirements-cloud.txt  requirements-locked.txt  requirements-ml.txt  requirements.in  setup.cfg  telegram_notifier.py  train_models.py
app/: dashboard.py
cloud_backend/: api_server.py  app.py  frontend_server.py
cloud_functions/: README.md  main.py  requirements.txt
data/: event_timeline.csv  greenhouse_training_data.csv
docs/: CLOUD_BACKEND_SETUP.md  CLOUD_SYNC_PREP.md  EVENT_ARCHITECTURE.md  EVENT_DEMO_SCRIPT.md  EVENT_EVIDENCE.md  EVENT_FALLBACK_PLAN.md  EVENT_ONE_PAGER.md  EVENT_READY_PACK.md  EVENT_RELIABILITY_LOG_TEMPLATE.md  FRONTEND_THEME.md  OPERATIONS.md  TELEGRAM_SETUP.md  event_evidence.json
firmware/: iotf.ino
integrations/: __init__.py  cloud_sync.py  firebase_sync.py  telegram_notifier.py
ml/: ml_pipeline.py  predict_next.py  train_models.py
models/: feature_columns.json
scripts/: __init__.py  cloud_sync_worker.py  dashboard.py  download_models.py  event_rehearsal.ps1  firestore_sync_worker.py  generate_event_evidence.py  generate_health_report.py  install_retraining_schedule.ps1  predict_next.py  retrain_models.ps1  run_cloud_api.ps1  run_cloud_sync.ps1  run_dashboard.ps1  run_retraining_healthcheck.ps1  run_web_frontend.ps1  secret_manager.py  telegram_notifier.py  train_models.py  upload_models.py
tests/: test_cloud_sync.py  test_dashboard_integration.py  test_health_report.py  test_ml_pipeline_training.py  test_telegram_notifier.py
(+5 files in other folders)
