[metadata]
name = farmease
version = 0.1.0
description = Smart greenhouse prototype
long_description = file: README.md
long_description_content_type = text/markdown
author = Farmease
license = MIT

[options]
packages = find:
include_package_data = True
;
; Dependency installation is handled via the top-level requirements.txt
; Install with: python -m pip install -r requirements.txt

[options.extras_require]
dev =
    pytest
    black
    flake8

[options.packages.find]
exclude =
    tests
    docs
    scripts

[options.entry_points]
console_scripts =
    farmease-dashboard = dashboard:main
    farmease-train = train_models:main
    farmease-predict = predict_next:main
    farmease-telegram = telegram_notifier:main
